# polylang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  coverage.sh  function_tests.py  pull-collections  pull-collections.sh  test.sh  transfer.js
.github/workflows/: publish.beta.yml  publish.stable.yml  release.beta.yml  release.branch.yml  release.pr.merge.yml  server.yaml  test.yaml
abi/: Cargo.toml
abi/src/: lib.rs  publickey.rs
docker/: Dockerfile
error/: Cargo.toml
error/src/: kind.rs  lib.rs  span.rs
examples/: Cargo.toml  README.md
examples/account-balances/: Cargo.toml  README.md
examples/account-balances/src/: main.rs
examples/binary-search/: Cargo.toml  README.md
examples/binary-search/src/: main.rs
examples/city-country/: Cargo.toml  README.md
examples/city-country/src/: main.rs
examples/common/: Cargo.toml  README.md
examples/common/src/: lib.rs
examples/fibonacci/: Cargo.toml  README.md
examples/fibonacci/src/: main.rs
examples/hello-world/: Cargo.toml  README.md
examples/hello-world/src/: main.rs
examples/reverse-array/: Cargo.toml  README.md
examples/reverse-array/src/: main.rs
go/: go.mod  go.sum  main.go
go/ast/: ast.go
go/parser/: .gitignore  parser.go  parser.h  polylang.h  spacetime_lang.h
go/stableast/: stableast.go
js/: .eslintrc  .gitignore  lerna.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/src/: ast.ts  common.ts  index.ts
js/src/validator/: index.ts
miden-run/: Cargo.toml
miden-run/src/: main.rs
mil/: .gitignore  Cargo.toml
mil/parser/: Cargo.toml
mil/parser/src/: ast.rs  lib.rs  mil.lalrpop
mil/src/: compiler.rs  lib.rs  main.rs
parser/: Cargo.toml
parser/src/: ast.rs  lexer.rs  lib.rs  polylang.lalrpop
prover/: Cargo.toml
prover/src/: lib.rs
server/: Cargo.toml
server-routes/: Cargo.toml
server-routes/src/: prove.rs  verify.rs
server/src/: main.rs
showcase/: Cargo.toml  LICENSE.md  README.md
showcase/examples/: accounts.rs  binary_search.rs  city_country.rs  fibonacci.rs  hello_world.rs  reverse_array.rs
site/: .env.local.example  .gitignore  LICENSE.md  README.md  package.json  pnpm-lock.yaml  theme.config.tsx
site/components/: Code.tsx  ColorModeSwitcher.tsx  ColorModeSync.tsx  Home.tsx  Logo.tsx  Navbar.tsx  Playground.tsx  PoweredBy.tsx  Prover.tsx  Why.tsx  example.ts  polylang.ts  useAsyncCallback.ts
site/components/pkg/: index.d.ts  index.js  index_bg.js  index_bg.wasm.d.ts
site/pages/: _app.tsx  _meta.json  about.mdx  index.mdx  playground.mdx
site/pages/docs/: _meta.json  index.mdx
site/pages/docs/getting-started/: _meta.json  building-from-source.mdx  polylang-cli.mdx  polylang-lib.mdx
site/pages/docs/language-features/: _meta.json  bindings.mdx  constructors.mdx  context.mdx  control-flow.mdx  errors.mdx  fields.mdx  fieldtypes.mdx  functions.mdx  general-structure.mdx  lexical-structure.mdx  permissions.mdx
site/pages/docs/zk-proofs/: _meta.json  polylang-and-zk.mdx  what-is-zk.mdx
src/: ast.rs  bindings.rs  interpreter.rs  js.rs  lib.rs  polylang.lalrpop  spacetime.lalrpop  stableast.rs  validation.rs
src/compiler/: abi.rs  array.rs  boolean.rs  bytes.rs  encoder.rs  float32.rs  float64.rs  int32.rs  int64.rs  ir.rs  map.rs  mod.rs  nullable.rs  publickey.rs  string.rs  uint32.rs  uint64.rs
src/prover/: mod.rs
tests/: Cargo.toml
tests/src/: col_refs.rs  lib.rs  push.rs  slice.rs  splice.rs  string.rs  unshift.rs
wasm-api/: Cargo.toml  README.md  example.js  package.json  webpack.config.js
wasm-api/src/: lib.rs
