[package]
name = "polylang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "compile"
path = "src/bin/compile/main.rs"

[[bin]]
name = "miden-run"
path = "src/bin/miden-run/main.rs"

[[bin]]
name = "prover"
path = "src/bin/prover/main.rs"

[workspace]
members = ["prover", "abi"]

[features]
default = ["parser"]
parser = []

[dependencies]
abi = { path = "./abi" }
regex = { version = "1", default-features = false }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
polylang_parser = { path = "./parser" }
miden-vm = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.5.0" }
miden-processor = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.5.0" }
miden-stdlib = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.5.0" }
winter-math = "*"
lazy_static = "1.4.0"
base64 = "0.21.0"
quickcheck_macros = "1.0.0"
quickcheck = "1.0.3"
actix-web = "4"

[dev-dependencies]
pretty_assertions = "1.3.0"
rand = "0.8.5"
expect-test = "1.4.0"
itertools = "0.10.5"
test-case = "3.0.0"
