[package]
name = "polylang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "compile"
path = "src/bin/compile/main.rs"

[workspace]
members = ["parser", "prover", "abi", "miden-run", "error", "tests"]

[features]
default = ["parser", "bindings"]
parser = []
bindings = []

[dependencies]
abi = { path = "./abi" }
error = { path = "./error" }
regex = { version = "1", default-features = false }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
polylang_parser = { path = "./parser" }
miden-vm = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1" }
miden-processor = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1" }
miden-stdlib = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1" }
winter-math = "*"
lazy_static = "1.4.0"
base64 = "0.21.0"
quickcheck_macros = "1.0.0"
quickcheck = "1.0.3"
derive_more = { version = "0.99.17", features = ["deref", "from", "deref_mut"], default-features = false }
parking_lot = "0.12.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
rand = "0.8.5"
expect-test = "1.4.0"
itertools = "0.10.5"
test-case = "3.0.0"
