[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error = { path = "../error" }
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
snafu = "0.7.4"
secp256k1 = { version = "0.26" }
hex = "0.4"
