[package]
name = "error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["deref"] }
parking_lot = "0.12.1"
serde = { version = "1.0.163", features = ["derive"] }
snafu = "0.7.4"

[dev-dependencies]
test-case = "3.0.0"
