[package]
name = "mil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mil_parser = { path = "./parser" }

[dev-dependencies]
miden = { git = "https://github.com/maticnetwork/miden", rev = "cd0608eae4137493619717f124bf5ca404c28a2b" }
miden-processor = { git = "https://github.com/maticnetwork/miden", rev = "cd0608eae4137493619717f124bf5ca404c28a2b" }
miden-stdlib = { git = "https://github.com/maticnetwork/miden", rev = "cd0608eae4137493619717f124bf5ca404c28a2b" }
