[package]
name = "polylang_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = { version = "1", default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[build-dependencies]
lalrpop = "0.19.7"
