[package]
name = "server-routes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polylang-prover = { path = "../prover" }
abi = { path = "../abi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
error = { path = "../error" }
tokio = { version = "1" }
base64 = "0.21.4"
miden-vm = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1", default-features = false }
