[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
polylang-prover = { path = "../prover" }
abi = { path = "../abi" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1"
error = { path = "../error" }
base64 = "0.21.4"
