[package]
name = "polylang-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
polylang= { git = "https://github.com/polybase/polylang", branch = "main" }
polylang_parser = { git = "https://github.com/polybase/polylang", branch = "main" }
polylang-prover = { git = "https://github.com/polybase/polylang" , branch = "main"}
abi = { git = "https://github.com/polybase/polylang" , branch = "main"}
serde_json =  { version = "1.0.107", features = ["arbitrary_precision" ]}
serde = { version = "1.0.188", features = ["derive"] }
