[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polylang-prover = { path = "../prover" }
polylang = { path = ".." }
abi = { path = "../abi" }
error = { path = "../error" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
expect-test = "1.4.1"
