[package]
name = "wasm-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abi = { path = "../abi" }
polylang-prover = { path = "../prover" }
polylang = { path = "../" }
error = { path = "../error" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
