[package]
name = "mil_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = { version = "1", default-features = false }

[build-dependencies]
lalrpop = "0.19.7"
